[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/levels_code.gd" type="Script" id=1]
[ext_resource path="res://scene/objects/checkpoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://tiles/TileMaps.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Cubi&Cuba.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/objects/scene_warp.tscn" type="PackedScene" id=5]
[ext_resource path="res://img/hub.png" type="Texture" id=6]
[ext_resource path="res://scene/objects/deadZone.tscn" type="PackedScene" id=7]

[node name="level02" type="Node2D"]
script = ExtResource( 1 )

[node name="initial" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 704 )

[node name="TileMaps" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[node name="x64_gd_tiles" parent="TileMaps" index="0"]
tile_data = PoolIntArray( -196606, 6, 0, -131070, 6, 0, -65534, 6, 0, 2, 6, 0, 6, 6, 0, 10, 6, 0, 65538, 6, 0, 65542, 6, 0, 65546, 6, 0, 65570, 6, 0, 131074, 6, 0, 131078, 6, 0, 131081, 6, 0, 131106, 6, 0, 196610, 6, 0, 196614, 6, 0, 196617, 6, 0, 196642, 6, 0, 262146, 6, 0, 262150, 6, 0, 262152, 6, 0, 262153, 6, 0, 262178, 6, 0, 327682, 6, 0, 327714, 6, 0, 393218, 6, 0, 393250, 6, 0, 458754, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 458775, 6, 0, 458776, 6, 0, 458777, 6, 0, 458778, 6, 0, 458779, 6, 0, 458780, 6, 0, 458781, 6, 0, 458782, 6, 0, 458783, 6, 0, 458784, 6, 0, 458785, 6, 0, 458786, 6, 0, 524290, 6, 0, 524292, 6, 0, 524322, 6, 0, 589826, 6, 0, 589858, 6, 0, 655362, 6, 0, 655394, 6, 0, 720898, 6, 0, 720910, 6, 0, 720930, 6, 0, 786434, 6, 0, 786447, 6, 0, 786466, 6, 0, 851970, 6, 0, 851984, 6, 0, 852002, 6, 0, 917506, 6, 0, 917538, 6, 0, 983042, 6, 0, 983043, 6, 0, 983044, 6, 0, 983045, 6, 0, 983046, 6, 0, 983047, 6, 0, 983048, 6, 0, 983049, 6, 0, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 6, 0, 983062, 6, 0, 983063, 6, 0, 983064, 6, 0, 983065, 6, 0, 983066, 6, 0, 983067, 6, 0, 983068, 6, 0, 983069, 6, 0, 983070, 6, 0, 983071, 6, 0, 983072, 6, 0, 983073, 6, 0, 983074, 6, 0, 1179644, 4, 0 )

[node name="x32_gd_tiles" parent="TileMaps" index="1"]
tile_data = PoolIntArray( 131091, 6, 0, 196627, 6, 0, 393233, 6, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393259, 0, 0, 393260, 0, 0, 393261, 0, 0, 393266, 0, 0, 393269, 0, 0, 393270, 0, 0, 393273, 0, 0, 393274, 0, 0, 393275, 0, 0, 393278, 0, 0, 458769, 6, 0, 458784, 0, 0, 458787, 0, 0, 458791, 0, 0, 458796, 0, 0, 458801, 0, 0, 458803, 0, 0, 458805, 0, 0, 458807, 0, 0, 458809, 0, 0, 458813, 0, 0, 458815, 0, 0, 524320, 0, 0, 524323, 0, 0, 524324, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524332, 0, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524341, 0, 0, 524342, 0, 0, 524345, 0, 0, 524346, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 589856, 0, 0, 589859, 0, 0, 589865, 0, 0, 589868, 0, 0, 589873, 0, 0, 589875, 0, 0, 589877, 0, 0, 589879, 0, 0, 589881, 0, 0, 589885, 0, 0, 589887, 0, 0, 655372, 6, 0, 655373, 6, 0, 655376, 6, 0, 655377, 6, 0, 655392, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 655404, 0, 0, 655409, 0, 0, 655411, 0, 0, 655413, 0, 0, 655415, 0, 0, 655417, 0, 0, 655418, 0, 0, 655419, 0, 0, 655421, 0, 0, 655423, 0, 0, 720912, 6, 0, 786448, 6, 0, 1179656, 6, 0, 1245192, 6, 0, 1310728, 6, 0, 1376264, 6, 0, 1441798, 6, 0, 1441799, 6, 0, 1441800, 6, 0, 1572883, 6, 0, 1572885, 6, 0, 1638422, 6, 0, 1638424, 6, 0, 1703961, 6, 0, 1703963, 6, 0, 1966117, 6, 0, 1966119, 6, 0, 1966121, 6, 0, 1966123, 6, 0, 2031652, 6, 0, 2031653, 6, 0, 2031655, 6, 0, 2031657, 6, 0, 2031659, 6, 0, 2097189, 6, 0, 2097190, 6, 0, 2097191, 6, 0, 2097193, 6, 0, 2097195, 6, 0, 2162727, 6, 0, 2162728, 6, 0, 2162729, 6, 0, 2162731, 6, 0, 2228265, 6, 0, 2228266, 6, 0, 2228267, 6, 0 )

[node name="x64_crossable_tiles" parent="TileMaps" index="2"]
z_index = -1
tile_data = PoolIntArray( 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 131073, 6, 0, 131079, 0, 0, 131089, 6, 0, 196609, 6, 0, 196625, 6, 0, 262145, 6, 0, 262151, 0, 0, 262161, 6, 0, 327681, 6, 0, 327697, 6, 0, 393217, 6, 0, 393223, 0, 0, 393233, 6, 0, 458769, 6, 0, 524289, 6, 0, 524295, 0, 0, 524305, 6, 0, 589825, 6, 0, 589841, 6, 0, 655361, 6, 0, 655367, 0, 0, 655377, 6, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 917507, 0, 0, 1179651, 0, 0, 1441796, 0, 0, 1441797, 0, 0 )

[node name="ground" parent="TileMaps" index="3"]
tile_data = PoolIntArray(  )

[node name="Players" parent="." instance=ExtResource( 4 )]
position = Vector2( -80, 0 )

[node name="exit" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 2016, 896 )
next_scene = "res://scene/levels/HubRoom.tscn"

[node name="Sprite" parent="exit/exit" index="1"]
texture = ExtResource( 6 )

[node name="deadZone" parent="." instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 1216, 1312 )

[node name="CollisionPolygon2D" parent="deadZone" index="0"]
position = Vector2( 0, 28 )
polygon = PoolVector2Array( -2000, 50, -2000, 0, 2000, 0, 2000, 50 )

[node name="checkpoint" parent="." instance=ExtResource( 2 )]
position = Vector2( 256, 704 )

[editable path="TileMaps"]

[editable path="exit"]

[editable path="deadZone"]
