[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/levels_code.gd" type="Script" id=1]
[ext_resource path="res://scene/prefab/checkpoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://tiles/TileMaps.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Cubi&Cuba.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/objects/HubDoor.tscn" type="PackedScene" id=5]

[node name="rawScene" type="Node2D"]
script = ExtResource( 1 )

[node name="initial" parent="." instance=ExtResource( 2 )]
position = Vector2( 256, 1024 )

[node name="TileMaps" parent="." instance=ExtResource( 3 )]

[node name="x64_gd_tiles" parent="TileMaps" index="0"]
tile_data = PoolIntArray( 327681, 4, 0, 327682, 4, 0, 327702, 4, 0, 327703, 4, 0, 393217, 4, 0, 393239, 4, 0, 983041, 4, 0, 983063, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0 )

[node name="x64_crossable_tiles" parent="TileMaps" index="2"]
tile_data = PoolIntArray( 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 131073, 6, 0, 131089, 6, 0, 196609, 6, 0, 196625, 6, 0, 262145, 6, 0, 262161, 6, 0, 327681, 6, 0, 327697, 6, 0, 393217, 6, 0, 393233, 6, 0, 458769, 6, 0, 524289, 6, 0, 524305, 6, 0, 589825, 6, 0, 589841, 6, 0, 655361, 6, 0, 655377, 6, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0 )

[node name="item_tiles" parent="TileMaps" index="3"]
format = 1

[node name="Players" parent="." instance=ExtResource( 4 )]
editor/display_folded = true

[node name="cubi" parent="Players" index="0"]
can_use_shadow = true

[node name="cuba" parent="Players" index="1"]
can_use_shadow = true

[node name="HubDoor" parent="." instance=ExtResource( 5 )]
position = Vector2( 672, 960 )

[editable path="TileMaps"]

[editable path="Players"]
